--- a/photologue/locale/hu/LC_MESSAGES/django.po
+++ b/photologue/locale/hu/LC_MESSAGES/django.po
@@ -23,17 +23,17 @@ msgstr ""
 #: admin.py:62
 #, python-format
 msgid ""
-"The following photo does not belong to the same site(s) as the gallery, so "
+"The following photo does not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgid_plural ""
-"The following photos do not belong to the same site(s) as the gallery, so "
+"The following photos do not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgstr[0] "A következő fot nem ugyanahhoz a webhely(ek)hez tartozik, mint az album, ezért soha nem fog megjelenni: %(photo_list)s"
 msgstr[1] "A következő fotók nem ugyanahhoz a webhely(ek)hez tartoznak, mint az album, ezért soha nem fognak megjelenni: %(photo_list)s"
 
 #: admin.py:74
 #, python-format
-msgid "The gallery has been successfully added to %(site)s"
+msgid "The publications_gallery has been successfully added to %(site)s"
 msgid_plural "The galleries have been successfully added to %(site)s"
 msgstr[0] "Az album sikeresen hozzáadva a(z) %(site)s webhelyhez"
 msgstr[1] "Az albumok sikeresen hozzáadva a(z) %(site)s webhelyhez"
@@ -44,7 +44,7 @@ msgstr "Kiválasztott albumok hozzáadása jelen webhelyhez"
 
 #: admin.py:87
 #, python-format
-msgid "The gallery has been successfully removed from %(site)s"
+msgid "The publications_gallery has been successfully removed from %(site)s"
 msgid_plural ""
 "The selected galleries have been successfully removed from %(site)s"
 msgstr[0] "Album sikeresen eltávolítva a(z) %(site)s webhelyről"
@@ -57,7 +57,7 @@ msgstr "Kiválasztott albumok eltávolítása jelen webhelyről"
 #: admin.py:101
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully added to %(site)s"
+"All photos in publications_gallery %(galleries)s have been successfully added to %(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully added to "
 "%(site)s"
@@ -71,7 +71,7 @@ msgstr "Kiválasztott albumok összes fotójának hozzáadása jelen webhelyhez"
 #: admin.py:119
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully removed from "
+"All photos in publications_gallery %(galleries)s have been successfully removed from "
 "%(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully removed from "
@@ -118,20 +118,20 @@ msgstr "Cím"
 #: forms.py:37
 msgid ""
 "All uploaded photos will be given a title made up of this title + a "
-"sequential number.<br>This field is required if creating a new gallery, but "
-"is optional when adding to an existing gallery - if not supplied, the photo "
-"titles will be creating from the existing gallery name."
+"sequential number.<br>This field is required if creating a new publications_gallery, but "
+"is optional when adding to an existing publications_gallery - if not supplied, the photo "
+"titles will be creating from the existing publications_gallery name."
 msgstr "Az összes feltöltött fotó címe ebből a címből + egy sorszámból fog állni.<br>Új album létrehozása esetén ezt a mezőt kötelező kitölteni, meglévő album esetén elhagyható - utóbbi esetben a fotók címe a meglévő album nevéből fog képződni."
 
 #: forms.py:43
-#| msgid "gallery"
+#| msgid "publications_gallery"
 msgid "Gallery"
 msgstr "Album"
 
 #: forms.py:45
 msgid ""
-"Select a gallery to add these images to. Leave this empty to create a new "
-"gallery from the supplied title."
+"Select a publications_gallery to add these images to. Leave this empty to create a new "
+"publications_gallery from the supplied title."
 msgstr "Válasszon ki egy albumot, amelyhez a fotók hozzáadásra kerüljenek! Hagyja üresen, ha új albumot akar létrehozni a megadott címmel!"
 
 #: forms.py:47
@@ -160,16 +160,16 @@ msgstr "Nyilvános"
 
 #: forms.py:56
 msgid ""
-"Uncheck this to make the uploaded gallery and included photographs private."
+"Uncheck this to make the uploaded publications_gallery and included photographs private."
 msgstr "Vegye ki a pipát, ha a feltöltött albumot és a benne lévő fotókat priváttá akarja tenni."
 
 #: forms.py:79
-msgid "A gallery with that title already exists."
+msgid "A publications_gallery with that title already exists."
 msgstr "Ezzel a címmel már létezik album."
 
 #: forms.py:89
 #| msgid "Select a .zip file of images to upload into a new Gallery."
-msgid "Select an existing gallery, or enter a title for a new gallery."
+msgid "Select an existing publications_gallery, or enter a title for a new publications_gallery."
 msgstr "Válasszon egy meglévő albumot, vagy írjon be egy címet új album létrehozásához."
 
 #: forms.py:122
@@ -186,7 +186,7 @@ msgstr "zip fájlban lévő „{0}” fájl feldolgozása sikertelen."
 
 #: forms.py:179
 #, python-brace-format
-msgid "The photos have been added to gallery \"{0}\"."
+msgid "The photos have been added to publications_gallery \"{0}\"."
 msgstr "Fotók hozzáadva a(z) „{0}” albumhoz."
 
 #: models.py:114
@@ -310,7 +310,7 @@ msgid "sites"
 msgstr "webhelyek"
 
 #: models.py:202
-msgid "gallery"
+msgid "publications_gallery"
 msgstr "album"
 
 #: models.py:203
@@ -581,8 +581,8 @@ msgid ""
 "\t\t<p>On this page you can upload many photos at once, as long as you have\n"
 "\t\tput them all in a zip archive. The photos can be either:</p>\n"
 "\t\t<ul>\n"
-"\t\t\t<li>Added to an existing gallery.</li>\n"
-"\t\t\t<li>Otherwise, a new gallery is created with the supplied title.</li>\n"
+"\t\t\t<li>Added to an existing publications_gallery.</li>\n"
+"\t\t\t<li>Otherwise, a new publications_gallery is created with the supplied title.</li>\n"
 "\t\t</ul>\n"
 "\t"
 msgstr "\n\t\t<p>Ezen az oldalon egyszerre több fotó tölthető fel, amennyiben azok\n\t\tegy zip fájlba lettek csomagolva. A fotókat:</p>\n\t\t<ul>\n\t\t\t<li>Meglévő albumba lehet tenni.</li>\n\t\t\t<li>Vagy a megadott címmel új album is létrehozható.</li>\n\t\t</ul>\n\t"
@@ -743,7 +743,7 @@ msgstr "Összes fotó"
 #~ "All uploaded photos will be given a title made up of this title + a "
 #~ "sequential number."
 #~ msgstr ""
-#~ "All photos in the gallery will be given a title made up of the gallery title"
+#~ "All photos in the publications_gallery will be given a title made up of the publications_gallery title"
 #~ " + a sequential number."
 
 #~ msgid "Separate tags with spaces, put quotes around multiple-word tags."
@@ -758,8 +758,8 @@ msgstr "Összes fotó"
 #~ msgid "images file (.zip)"
 #~ msgstr "images file (.zip)"
 
-#~ msgid "gallery upload"
-#~ msgstr "gallery upload"
+#~ msgid "publications_gallery upload"
+#~ msgstr "publications_gallery upload"
 
-#~ msgid "gallery uploads"
-#~ msgstr "gallery uploads"
+#~ msgid "publications_gallery uploads"
+#~ msgstr "publications_gallery uploads"
