--- a/photologue/locale/de/LC_MESSAGES/django.po
+++ b/photologue/locale/de/LC_MESSAGES/django.po
@@ -32,17 +32,17 @@ msgstr ""
 #| msgid "The following photo does not belong to the same site(s)"
 #| msgid_plural "The following photos do not belong to the same site(s)"
 msgid ""
-"The following photo does not belong to the same site(s) as the gallery, so "
+"The following photo does not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgid_plural ""
-"The following photos do not belong to the same site(s) as the gallery, so "
+"The following photos do not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgstr[0] "Dieses Foto gehört nicht derselben / denselben Seite(n) an."
 msgstr[1] "Diese Fotos gehört nicht derselben / denselben Seite(n) an."
 
 #: admin.py:74
 #, python-format
-msgid "The gallery has been successfully added to %(site)s"
+msgid "The publications_gallery has been successfully added to %(site)s"
 msgid_plural "The galleries have been successfully added to %(site)s"
 msgstr[0] "Die Galerie wurden erfolgreich zu %(site)s hinzugefügt."
 msgstr[1] "Die Galerien wurden erfolgreich zu %(site)s hinzugefügt."
@@ -53,7 +53,7 @@ msgstr "Ausgewählte Galerien zur aktuellen Site hinzufügen"
 
 #: admin.py:87
 #, python-format
-msgid "The gallery has been successfully removed from %(site)s"
+msgid "The publications_gallery has been successfully removed from %(site)s"
 msgid_plural ""
 "The selected galleries have been successfully removed from %(site)s"
 msgstr[0] "Die ausgewählte Galerie wurde erfolgreich von %(site)s entfernt."
@@ -66,7 +66,7 @@ msgstr "Entferne ausgewählte Galerien von der aktuellen Site."
 #: admin.py:101
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully added to %(site)s"
+"All photos in publications_gallery %(galleries)s have been successfully added to %(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully added to "
 "%(site)s"
@@ -82,7 +82,7 @@ msgstr "Alle Fotos der ausgewählten Galerien zur aktuellen Site hinzufügen."
 #: admin.py:119
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully removed from "
+"All photos in publications_gallery %(galleries)s have been successfully removed from "
 "%(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully removed from "
@@ -131,9 +131,9 @@ msgstr "Titel"
 #: forms.py:37
 msgid ""
 "All uploaded photos will be given a title made up of this title + a "
-"sequential number.<br>This field is required if creating a new gallery, but "
-"is optional when adding to an existing gallery - if not supplied, the photo "
-"titles will be creating from the existing gallery name."
+"sequential number.<br>This field is required if creating a new publications_gallery, but "
+"is optional when adding to an existing publications_gallery - if not supplied, the photo "
+"titles will be creating from the existing publications_gallery name."
 msgstr ""
 
 #: forms.py:43
@@ -142,8 +142,8 @@ msgstr "Galerie"
 
 #: forms.py:45
 msgid ""
-"Select a gallery to add these images to. Leave this empty to create a new "
-"gallery from the supplied title."
+"Select a publications_gallery to add these images to. Leave this empty to create a new "
+"publications_gallery from the supplied title."
 msgstr ""
 "Wähle eine Galerie aus, zu der diese Bilder hinzugefügt werden sollen. Lasse "
 "dieses Feld leer, um eine neue Galerie mit dem angegeben Titel zu erzeugen."
@@ -172,17 +172,17 @@ msgstr "Ist öffentlich"
 
 #: forms.py:56
 msgid ""
-"Uncheck this to make the uploaded gallery and included photographs private."
+"Uncheck this to make the uploaded publications_gallery and included photographs private."
 msgstr ""
 "Schalte dies aus, um die hochgeladene Galerie und alle enthaltenen Bilder "
 "privat zu machen."
 
 #: forms.py:79
-msgid "A gallery with that title already exists."
+msgid "A publications_gallery with that title already exists."
 msgstr "Es existiert bereits eine Gallerie mit diesem Titel."
 
 #: forms.py:89
-msgid "Select an existing gallery, or enter a title for a new gallery."
+msgid "Select an existing publications_gallery, or enter a title for a new publications_gallery."
 msgstr ""
 "Wähle eine existierende Galerie aus oder gib einen Titel für eine neue "
 "Galerie ein."
@@ -204,7 +204,7 @@ msgstr "Konnte die Datei \"{0}\" aus dem Zip-Archiv nicht verarbeiten."
 
 #: forms.py:179
 #, python-brace-format
-msgid "The photos have been added to gallery \"{0}\"."
+msgid "The photos have been added to publications_gallery \"{0}\"."
 msgstr "Die Fotos wurden zur Galerie \"{0}\" hinzugefügt."
 
 #: models.py:114
@@ -333,7 +333,7 @@ msgid "sites"
 msgstr "Seiten"
 
 #: models.py:202
-msgid "gallery"
+msgid "publications_gallery"
 msgstr "Galerie"
 
 #: models.py:203
@@ -635,8 +635,8 @@ msgid ""
 "\t\t<p>On this page you can upload many photos at once, as long as you have\n"
 "\t\tput them all in a zip archive. The photos can be either:</p>\n"
 "\t\t<ul>\n"
-"\t\t\t<li>Added to an existing gallery.</li>\n"
-"\t\t\t<li>Otherwise, a new gallery is created with the supplied title.</li>\n"
+"\t\t\t<li>Added to an existing publications_gallery.</li>\n"
+"\t\t\t<li>Otherwise, a new publications_gallery is created with the supplied title.</li>\n"
 "\t\t</ul>\n"
 "\t"
 msgstr ""
@@ -829,8 +829,8 @@ msgstr "Alle Fotos"
 #~ msgid "images file (.zip)"
 #~ msgstr "images file (.zip)"
 
-#~ msgid "gallery upload"
-#~ msgstr "gallery upload"
+#~ msgid "publications_gallery upload"
+#~ msgstr "publications_gallery upload"
 
-#~ msgid "gallery uploads"
-#~ msgstr "gallery uploads"
+#~ msgid "publications_gallery uploads"
+#~ msgstr "publications_gallery uploads"
