--- a/photologue/locale/nl/LC_MESSAGES/django.po
+++ b/photologue/locale/nl/LC_MESSAGES/django.po
@@ -26,17 +26,17 @@ msgstr ""
 #| msgid "The following photo does not belong to the same site(s)"
 #| msgid_plural "The following photos do not belong to the same site(s)"
 msgid ""
-"The following photo does not belong to the same site(s) as the gallery, so "
+"The following photo does not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgid_plural ""
-"The following photos do not belong to the same site(s) as the gallery, so "
+"The following photos do not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgstr[0] "De volgende foto behoort niet tot dezelfde pagina(s)"
 msgstr[1] "De volgende foto's behoren niet tot dezelfde pagina(s)"
 
 #: admin.py:74
 #, python-format
-msgid "The gallery has been successfully added to %(site)s"
+msgid "The publications_gallery has been successfully added to %(site)s"
 msgid_plural "The galleries have been successfully added to %(site)s"
 msgstr[0] "De gallerij is met succes toegevoegd aan %(site)s"
 msgstr[1] "De gallerijen zijn met succes toegevoegd aan %(site)s"
@@ -47,7 +47,7 @@ msgstr "Voeg geselecteerde gallerij toe aan de huidige pagina"
 
 #: admin.py:87
 #, python-format
-msgid "The gallery has been successfully removed from %(site)s"
+msgid "The publications_gallery has been successfully removed from %(site)s"
 msgid_plural ""
 "The selected galleries have been successfully removed from %(site)s"
 msgstr[0] "De geselecteerde gallerij is met succes verwijderd van %(site)s"
@@ -60,7 +60,7 @@ msgstr "Verwijder geselecteerde gallerijen van de huidige pagina"
 #: admin.py:101
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully added to %(site)s"
+"All photos in publications_gallery %(galleries)s have been successfully added to %(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully added to "
 "%(site)s"
@@ -77,7 +77,7 @@ msgstr "Voeg alle foto's van de gelecteerde gallerij toe aan de huidige pagina"
 #: admin.py:119
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully removed from "
+"All photos in publications_gallery %(galleries)s have been successfully removed from "
 "%(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully removed from "
@@ -126,9 +126,9 @@ msgstr "Titel"
 #: forms.py:37
 msgid ""
 "All uploaded photos will be given a title made up of this title + a "
-"sequential number.<br>This field is required if creating a new gallery, but "
-"is optional when adding to an existing gallery - if not supplied, the photo "
-"titles will be creating from the existing gallery name."
+"sequential number.<br>This field is required if creating a new publications_gallery, but "
+"is optional when adding to an existing publications_gallery - if not supplied, the photo "
+"titles will be creating from the existing publications_gallery name."
 msgstr ""
 
 #: forms.py:43
@@ -137,8 +137,8 @@ msgstr "Gallerij"
 
 #: forms.py:45
 msgid ""
-"Select a gallery to add these images to. Leave this empty to create a new "
-"gallery from the supplied title."
+"Select a publications_gallery to add these images to. Leave this empty to create a new "
+"publications_gallery from the supplied title."
 msgstr ""
 "Selecteer een gallerij om deze foto's aan toe te voegen. Laat dit leeg om "
 "een nieuwe gallerij aan te maken met de gegeven titel. "
@@ -167,15 +167,15 @@ msgstr "Is publiek toegankelijk"
 
 #: forms.py:56
 msgid ""
-"Uncheck this to make the uploaded gallery and included photographs private."
+"Uncheck this to make the uploaded publications_gallery and included photographs private."
 msgstr "Haal dit vinkje weg om de geüploade galerij en foto's privé te maken."
 
 #: forms.py:79
-msgid "A gallery with that title already exists."
+msgid "A publications_gallery with that title already exists."
 msgstr "Een gallerij met deze titel bestaat al"
 
 #: forms.py:89
-msgid "Select an existing gallery, or enter a title for a new gallery."
+msgid "Select an existing publications_gallery, or enter a title for a new publications_gallery."
 msgstr ""
 "Selecteer een bestaande gallerij of vul de titel in van een nieuwe gallerij"
 
@@ -195,7 +195,7 @@ msgstr "Kon bestand \"{0}\" in het zip-archief niet verwerken."
 
 #: forms.py:179
 #, python-brace-format
-msgid "The photos have been added to gallery \"{0}\"."
+msgid "The photos have been added to publications_gallery \"{0}\"."
 msgstr "De foto's zijn toegevoegd aan gallerij \"{0}\"."
 
 #: models.py:114
@@ -322,7 +322,7 @@ msgid "sites"
 msgstr "pagina's"
 
 #: models.py:202
-msgid "gallery"
+msgid "publications_gallery"
 msgstr "galerij"
 
 #: models.py:203
@@ -626,8 +626,8 @@ msgid ""
 "\t\t<p>On this page you can upload many photos at once, as long as you have\n"
 "\t\tput them all in a zip archive. The photos can be either:</p>\n"
 "\t\t<ul>\n"
-"\t\t\t<li>Added to an existing gallery.</li>\n"
-"\t\t\t<li>Otherwise, a new gallery is created with the supplied title.</li>\n"
+"\t\t\t<li>Added to an existing publications_gallery.</li>\n"
+"\t\t\t<li>Otherwise, a new publications_gallery is created with the supplied title.</li>\n"
 "\t\t</ul>\n"
 "\t"
 msgstr ""
@@ -822,8 +822,8 @@ msgstr "Alle foto's"
 #~ msgid "images file (.zip)"
 #~ msgstr "images file (.zip)"
 
-#~ msgid "gallery upload"
-#~ msgstr "gallery upload"
+#~ msgid "publications_gallery upload"
+#~ msgstr "publications_gallery upload"
 
-#~ msgid "gallery uploads"
-#~ msgstr "gallery uploads"
+#~ msgid "publications_gallery uploads"
+#~ msgstr "publications_gallery uploads"
