--- a/photologue/locale/sk/LC_MESSAGES/django.po
+++ b/photologue/locale/sk/LC_MESSAGES/django.po
@@ -28,10 +28,10 @@ msgstr ""
 #| msgid "The following photo does not belong to the same site(s)"
 #| msgid_plural "The following photos do not belong to the same site(s)"
 msgid ""
-"The following photo does not belong to the same site(s) as the gallery, so "
+"The following photo does not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgid_plural ""
-"The following photos do not belong to the same site(s) as the gallery, so "
+"The following photos do not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgstr[0] "Nasledujúca fotografia nepatrí tej istej stránke (stránkam)"
 msgstr[1] "Nasledujúce fotografie nepatria tej istej stránke (stránkam)"
@@ -39,7 +39,7 @@ msgstr[2] "Nasledujúce fotografie nepatria tej istej stránke (stránkam)"
 
 #: admin.py:74
 #, python-format
-msgid "The gallery has been successfully added to %(site)s"
+msgid "The publications_gallery has been successfully added to %(site)s"
 msgid_plural "The galleries have been successfully added to %(site)s"
 msgstr[0] "Galéria bola úspešne pridaná na %(site)s"
 msgstr[1] "Galérie boli úspešne pridané na %(site)s"
@@ -51,7 +51,7 @@ msgstr "Pridať vybrané galérie na aktuálnu stránku"
 
 #: admin.py:87
 #, python-format
-msgid "The gallery has been successfully removed from %(site)s"
+msgid "The publications_gallery has been successfully removed from %(site)s"
 msgid_plural ""
 "The selected galleries have been successfully removed from %(site)s"
 msgstr[0] "Galéria bola úspešne odobratá zo %(site)s"
@@ -65,7 +65,7 @@ msgstr "Odobrať označené galérie z aktuálnej stránky"
 #: admin.py:101
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully added to %(site)s"
+"All photos in publications_gallery %(galleries)s have been successfully added to %(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully added to "
 "%(site)s"
@@ -86,7 +86,7 @@ msgstr "Pridať všetky fotografie z označených galérií do aktuálnej strán
 #: admin.py:119
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully removed from "
+"All photos in publications_gallery %(galleries)s have been successfully removed from "
 "%(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully removed from "
@@ -140,9 +140,9 @@ msgstr "Titulok"
 #: forms.py:37
 msgid ""
 "All uploaded photos will be given a title made up of this title + a "
-"sequential number.<br>This field is required if creating a new gallery, but "
-"is optional when adding to an existing gallery - if not supplied, the photo "
-"titles will be creating from the existing gallery name."
+"sequential number.<br>This field is required if creating a new publications_gallery, but "
+"is optional when adding to an existing publications_gallery - if not supplied, the photo "
+"titles will be creating from the existing publications_gallery name."
 msgstr ""
 
 #: forms.py:43
@@ -151,8 +151,8 @@ msgstr "Galéria"
 
 #: forms.py:45
 msgid ""
-"Select a gallery to add these images to. Leave this empty to create a new "
-"gallery from the supplied title."
+"Select a publications_gallery to add these images to. Leave this empty to create a new "
+"publications_gallery from the supplied title."
 msgstr ""
 "Vyberte galériu do ktorej chcete pridať tieto obrázky. Pre vytvorenie novej "
 "galérie so zadaným názvom ponechajte toto pole prázdne."
@@ -181,15 +181,15 @@ msgstr "Je verejná"
 
 #: forms.py:56
 msgid ""
-"Uncheck this to make the uploaded gallery and included photographs private."
+"Uncheck this to make the uploaded publications_gallery and included photographs private."
 msgstr "Odškrtnite, aby odovzdané galérie a zahrnuté fotografie boli súkromné."
 
 #: forms.py:79
-msgid "A gallery with that title already exists."
+msgid "A publications_gallery with that title already exists."
 msgstr "Galéria s týmto názvom už existuje."
 
 #: forms.py:89
-msgid "Select an existing gallery, or enter a title for a new gallery."
+msgid "Select an existing publications_gallery, or enter a title for a new publications_gallery."
 msgstr "Vyberte existujúcu galériu, alebo vyplnte názov pre novú."
 
 #: forms.py:122
@@ -208,7 +208,7 @@ msgstr "Nepodarilo sa spracovať súbor \"{0}\" v .zip archíve."
 
 #: forms.py:179
 #, python-brace-format
-msgid "The photos have been added to gallery \"{0}\"."
+msgid "The photos have been added to publications_gallery \"{0}\"."
 msgstr "Fotografie boli pridané do galérie \"{0}\". "
 
 #: models.py:114
@@ -335,7 +335,7 @@ msgid "sites"
 msgstr "stránky"
 
 #: models.py:202
-msgid "gallery"
+msgid "publications_gallery"
 msgstr "galéria"
 
 #: models.py:203
@@ -626,8 +626,8 @@ msgid ""
 "\t\t<p>On this page you can upload many photos at once, as long as you have\n"
 "\t\tput them all in a zip archive. The photos can be either:</p>\n"
 "\t\t<ul>\n"
-"\t\t\t<li>Added to an existing gallery.</li>\n"
-"\t\t\t<li>Otherwise, a new gallery is created with the supplied title.</li>\n"
+"\t\t\t<li>Added to an existing publications_gallery.</li>\n"
+"\t\t\t<li>Otherwise, a new publications_gallery is created with the supplied title.</li>\n"
 "\t\t</ul>\n"
 "\t"
 msgstr ""
@@ -821,8 +821,8 @@ msgstr "Všetky fotografie"
 #~ msgid "images file (.zip)"
 #~ msgstr "images file (.zip)"
 
-#~ msgid "gallery upload"
-#~ msgstr "gallery upload"
+#~ msgid "publications_gallery upload"
+#~ msgstr "publications_gallery upload"
 
-#~ msgid "gallery uploads"
-#~ msgstr "gallery uploads"
+#~ msgid "publications_gallery uploads"
+#~ msgstr "publications_gallery uploads"
