--- a/photologue/locale/tr/LC_MESSAGES/django.po
+++ b/photologue/locale/tr/LC_MESSAGES/django.po
@@ -27,17 +27,17 @@ msgstr ""
 #| msgid "The following photo does not belong to the same site(s)"
 #| msgid_plural "The following photos do not belong to the same site(s)"
 msgid ""
-"The following photo does not belong to the same site(s) as the gallery, so "
+"The following photo does not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgid_plural ""
-"The following photos do not belong to the same site(s) as the gallery, so "
+"The following photos do not belong to the same site(s) as the publications_gallery, so "
 "will never be displayed: %(photo_list)s."
 msgstr[0] "Bu foto aynı siteye ait değil"
 msgstr[1] "Bu fotoğraflar aynı sitelere ait değiller."
 
 #: admin.py:74
 #, python-format
-msgid "The gallery has been successfully added to %(site)s"
+msgid "The publications_gallery has been successfully added to %(site)s"
 msgid_plural "The galleries have been successfully added to %(site)s"
 msgstr[0] "Galeri başarıyla şu siteye yüklendi: %(site)s"
 msgstr[1] "Galeriler başarıyla şu siteye yüklendi: %(site)s"
@@ -48,7 +48,7 @@ msgstr ""
 
 #: admin.py:87
 #, python-format
-msgid "The gallery has been successfully removed from %(site)s"
+msgid "The publications_gallery has been successfully removed from %(site)s"
 msgid_plural ""
 "The selected galleries have been successfully removed from %(site)s"
 msgstr[0] "Galeri şu sitelerden başarıyla silindi: %(site)s"
@@ -61,7 +61,7 @@ msgstr "Seçili galerileri mevcut siteden çıkar"
 #: admin.py:101
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully added to %(site)s"
+"All photos in publications_gallery %(galleries)s have been successfully added to %(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully added to "
 "%(site)s"
@@ -75,7 +75,7 @@ msgstr "Seçili galerilerin tüm fotolarını mevcut siteye ekle"
 #: admin.py:119
 #, python-format
 msgid ""
-"All photos in gallery %(galleries)s have been successfully removed from "
+"All photos in publications_gallery %(galleries)s have been successfully removed from "
 "%(site)s"
 msgid_plural ""
 "All photos in galleries %(galleries)s have been successfully removed from "
@@ -120,9 +120,9 @@ msgstr ""
 #: forms.py:37
 msgid ""
 "All uploaded photos will be given a title made up of this title + a "
-"sequential number.<br>This field is required if creating a new gallery, but "
-"is optional when adding to an existing gallery - if not supplied, the photo "
-"titles will be creating from the existing gallery name."
+"sequential number.<br>This field is required if creating a new publications_gallery, but "
+"is optional when adding to an existing publications_gallery - if not supplied, the photo "
+"titles will be creating from the existing publications_gallery name."
 msgstr ""
 
 #: forms.py:43
@@ -131,8 +131,8 @@ msgstr ""
 
 #: forms.py:45
 msgid ""
-"Select a gallery to add these images to. Leave this empty to create a new "
-"gallery from the supplied title."
+"Select a publications_gallery to add these images to. Leave this empty to create a new "
+"publications_gallery from the supplied title."
 msgstr ""
 "Bu resimleri eklemek için bir galeri seçin. Verilen başlıktan yeni bir "
 "galeri oluşturmak için boş bırakın."
@@ -161,17 +161,17 @@ msgstr ""
 
 #: forms.py:56
 msgid ""
-"Uncheck this to make the uploaded gallery and included photographs private."
+"Uncheck this to make the uploaded publications_gallery and included photographs private."
 msgstr ""
 "Yüklenen bu galeriyi ve içerisindeki tüm fotoları özel yapmak için "
 "işaretlemeyin."
 
 #: forms.py:79
-msgid "A gallery with that title already exists."
+msgid "A publications_gallery with that title already exists."
 msgstr "Bu başlıkta bir galeri zaten var."
 
 #: forms.py:89
-msgid "Select an existing gallery, or enter a title for a new gallery."
+msgid "Select an existing publications_gallery, or enter a title for a new publications_gallery."
 msgstr ""
 
 #: forms.py:122
@@ -190,7 +190,7 @@ msgstr "Zip arşivindeki \"{0}\" dosyası işlenemedi."
 
 #: forms.py:179
 #, python-brace-format
-msgid "The photos have been added to gallery \"{0}\"."
+msgid "The photos have been added to publications_gallery \"{0}\"."
 msgstr ""
 
 #: models.py:114
@@ -316,7 +316,7 @@ msgid "sites"
 msgstr "siteler"
 
 #: models.py:202
-msgid "gallery"
+msgid "publications_gallery"
 msgstr "galeri"
 
 #: models.py:203
@@ -598,8 +598,8 @@ msgid ""
 "\t\t<p>On this page you can upload many photos at once, as long as you have\n"
 "\t\tput them all in a zip archive. The photos can be either:</p>\n"
 "\t\t<ul>\n"
-"\t\t\t<li>Added to an existing gallery.</li>\n"
-"\t\t\t<li>Otherwise, a new gallery is created with the supplied title.</li>\n"
+"\t\t\t<li>Added to an existing publications_gallery.</li>\n"
+"\t\t\t<li>Otherwise, a new publications_gallery is created with the supplied title.</li>\n"
 "\t\t</ul>\n"
 "\t"
 msgstr ""
@@ -785,8 +785,8 @@ msgstr "Tüm fotolar"
 #~ msgid "images file (.zip)"
 #~ msgstr "images file (.zip)"
 
-#~ msgid "gallery upload"
-#~ msgstr "gallery upload"
+#~ msgid "publications_gallery upload"
+#~ msgstr "publications_gallery upload"
 
-#~ msgid "gallery uploads"
-#~ msgstr "gallery uploads"
+#~ msgid "publications_gallery uploads"
+#~ msgstr "publications_gallery uploads"
