--- a/th_services/th_github/locale/es_ES/LC_MESSAGES/django.po
+++ b/th_services/th_github/locale/es_ES/LC_MESSAGES/django.po
@@ -9,3 +9,11 @@ msgstr ""
 # templates/github/callback.html:5
 msgid "Congratulations, you have successfully authorized this application to access your GitHub account!"
 msgstr "¡Enhorabuena, acabas de autorizar a esta aplicación para acceder a tu cuenta de GitHub!"
+
+# forms.py:18
+msgid "Username"
+msgstr "Nombre de usuario"
+
+# forms.py:19
+msgid "Project"
+msgstr "Proyecto"
