--- a/th_services/th_mastodon/locale/es_ES/LC_MESSAGES/django.po
+++ b/th_services/th_mastodon/locale/es_ES/LC_MESSAGES/django.po
@@ -9,3 +9,19 @@ msgstr ""
 # templates/mastodon/callback.html:5
 msgid "Congratulations, you have successfully authorized this application to access your Mastodon account!"
 msgstr "¡Enhorabuena, acabas de autorizar a esta aplicación para acceder a tu cuenta de Mastodon!"
+
+# forms.py:16
+msgid "Timeline"
+msgstr "Linea temporal"
+
+# forms.py:17
+msgid "Tooter"
+msgstr "Tooter"
+
+# forms.py:18
+msgid "Tag"
+msgstr "Etiqueta"
+
+# forms.py:19
+msgid "Favorite"
+msgstr "Favorito"
