--- a/th_services/th_pushbullet/locale/es_ES/LC_MESSAGES/django.po
+++ b/th_services/th_pushbullet/locale/es_ES/LC_MESSAGES/django.po
@@ -9,3 +9,19 @@ msgstr ""
 # templates/pushbullet/callback.html:5
 msgid "Congratulations, you have successfully authorized this application to access your Pushbullet account!"
 msgstr "¡Enhorabuena, acabas de autorizar a esta aplicación para acceder a tu cuenta de Pushbullet!"
+
+# forms.py:23
+msgid "Type"
+msgstr "Tipo"
+
+# forms.py:24
+msgid "Device"
+msgstr "Dispositivo"
+
+# forms.py:25
+msgid "Email"
+msgstr "Correo electrónico"
+
+# forms.py:26
+msgid "Channel"
+msgstr "Canal"
