--- a/th_services/th_tumblr/locale/es_ES/LC_MESSAGES/django.po
+++ b/th_services/th_tumblr/locale/es_ES/LC_MESSAGES/django.po
@@ -9,3 +9,11 @@ msgstr ""
 # templates/tumblr/callback.html:5
 msgid "Congratulations, you have successfully authorized this application to access your Tumblr account!"
 msgstr "¡Enhorabuena, acabas de autorizar a esta aplicación para acceder a tu cuenta de Tumblr!"
+
+# forms.py:19
+msgid "Blogname"
+msgstr "Nombre del blog"
+
+# forms.py:20
+msgid "Tag"
+msgstr "Etiqueta"
